# hdf5_plugins

./: CMakeLists.txt  openbsd_packages.md
AV/: CMakeLists.txt  Makefile.am  configure.ac
AV/config/cmake/: H5AVMacros.cmake  cacheinit.cmake
AV/example/: CMakeLists.txt  Makefile  Makefile.am  async_test_multifile.c  async_test_serial_error_stack.c
AV/example/test/: testCM.sh
AV/src/: CMakeLists.txt  Makefile  Makefile.am
BITGROOM/: CMakeLists.txt
BITGROOM/example/test/: test.sh  testCM.sh
BITGROOM/example/testfiles/: h5ex_d_bitgroom.h5
BITGROOM/src/: CMakeLists.txt  H5Zbitgroom.c
BLOSC/config/cmake/: cacheinit.cmake
BLOSC/example/: CMakeLists.txt
BLOSC/example/test/: test.sh  testCM.sh
BLOSC/example/testfiles/: h5repack_layout.h5-ud_convert.ddl
BSHUF/example/test/: test.sh  testCM.sh
BSHUF/example/testfiles/: h5repack_layout.h5-ud_convert.ddl
BSHUF/src/: H5Zbshuf.c
BZIP2/example/: CMakeLists.txt
BZIP2/example/test/: test.sh  testCM.sh
CV/: CMakeLists.txt  Makefile.am  configure.ac
CV/config/cmake/: cacheinit.cmake
CV/example/: CMakeLists.txt
CV/example/test/: testCM.sh
CV/src/: CMakeLists.txt  Makefile.am
JPEG/example/: CMakeLists.txt
JPEG/example/test/: test.sh  testCM.sh
LZ4/example/: CMakeLists.txt
LZ4/example/test/: testCM.sh
LZ4/example/testfiles/: h5repack_layout.h5-ud_convert.ddl
LZF/example/test/: testCM.sh
LZF/example/testfiles/: h5repack_layout.h5-ud_convert.ddl
MAFISC/: config.h.in
MAFISC/config/cmake/: ConfigureChecks.cmake  config.h.in
MAFISC/example/test/: testCM.sh
MAFISC/example/testfiles/: h5repack_layout.h5-ud_convert.ddl
PV/: CMakeLists.txt
PV/config/cmake/: ConfigureChecks.cmake  H5PVMacros.cmake  cacheinit.cmake
PV/example/: CMakeLists.txt  Makefile.am  new_h5api_ex.c
PV/example/test/: testCM.sh
PV/src/: CMakeLists.txt  Makefile.am
SZF/example/: CMakeLists.txt  Makefile.am
SZF/example/test/: testCM.sh
SZF/example/testfiles/: h5repack_layout.h5-ud_convert.ddl  ud_convert.h5repack_layout.h5.tst
SZF/src/lib/zlib/: gzguts.h
ZFP/example/test/: testCM.sh
ZFP/example/testfiles/: h5ex_d_zfp.ddl  h5ex_d_zfp.tst  h5repack_layout.h5-ud_convert.ddl
ZSTD/example/: CMakeLists.txt  h5ex_d_zstd.c
ZSTD/example/test/: test.sh  testCM.sh
ZSTD/example/testfiles/: h5ex_d_zstd.tst
ZSTD/src/: H5Zzstandard.c
config/cmake/: FindBLOSC.cmake  FindBZ2.cmake  FindZSTD.cmake  cacheinit.cmake
